@@ -18,14 +18,18 @@ import com.willyoubackend.domain.user_profile.repository.UserProfileRepository;
 import com.willyoubackend.global.dto.ApiResponse;
 import com.willyoubackend.global.exception.CustomException;
 import com.willyoubackend.global.exception.ErrorCode;
+import com.willyoubackend.global.util.AuthorizationUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,7 +44,7 @@ public class UserProfileService {
     private final ProfileImageRepository profileImageRepository;
     private final UserMatchStatusRepository userMatchStatusRepository;
 
-    public ResponseEntity<ApiResponse<UserProfileResponseDto>> updateUserProfile(UserEntity userEntity, UserProfileRequestDto userProfileRequestDto) {
+    public UserProfileResponseDto updateUserProfile(UserEntity requestingUser, Long userId, UserProfileRequestDto userProfileRequestDto) {
 
         if (userProfileRequestDto.getNickname() == null || userProfileRequestDto.getNickname().isEmpty()) {
             throw new CustomException(ErrorCode.INVALID_NICKNAME);
@@ -50,28 +54,16 @@ public class UserProfileService {
             throw new CustomException(ErrorCode.INVALID_GENDER);
         }
 
-        UserEntity loggedInUser = findUserById(userEntity.getId());
-
-        UserProfileEntity userProfileEntity = userEntity.getUserProfileEntity();
-
-        userProfileEntity.setUserEntity(loggedInUser);
+        if (!requestingUser.getId().equals(userId) && !AuthorizationUtils.isAdmin(requestingUser)) {
+            throw new CustomException(ErrorCode.NOT_AUTHORIZED);
+        }
+        UserEntity userToUpdate = findUserById(userId);
+        UserProfileEntity userProfileEntity = userToUpdate.getUserProfileEntity();
         userProfileEntity.updateProfile(userProfileRequestDto);
-
-        List<ProfileImageEntity> profileImageEntities = profileImageRepository.findAllByUserEntity(userEntity);
-
-        userProfileEntity.setUserActiveStatus(!profileImageEntities.isEmpty()); // 프로필 이미지가 있으면 true, 없으면 false
-
-//        if (!profileImageEntities.isEmpty()) {
-//            userProfileEntity.setUserActiveStatus(true);
-//        } else {
-//            userProfileEntity.setUserActiveStatus(false);
-//        }
-
+        List<ProfileImageEntity> profileImageEntities = profileImageRepository.findAllByUserEntity(userToUpdate);
+        userProfileEntity.setUserActiveStatus(!profileImageEntities.isEmpty());
         userProfileRepository.save(userProfileEntity);
-
-        UserProfileResponseDto userProfileResponseDto = new UserProfileResponseDto(loggedInUser);
-
-        return ResponseEntity.status(HttpStatus.OK).body(ApiResponse.successData(userProfileResponseDto));
+        return new UserProfileResponseDto(userToUpdate);
     }
 
     public ResponseEntity<ApiResponse<List<UserProfileResponseDto>>> getRecommendations(UserEntity userEntity) {
@@ -89,6 +81,7 @@ public class UserProfileService {
         int maxLimit = 0;
         for (UserEntity filteredUser : filteredUsers) {
             if (maxLimit == 100) break;
+            log.info(userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser) + "");
             if (!userNopeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser) &&
                     !userLikeStatusRepository.existBySentUserAndReceivedUser(userEntity, filteredUser) &&
                     filteredUser.getUserProfileEntity().isUserActiveStatus()) {
@@ -104,10 +97,19 @@ public class UserProfileService {
         List<DatingResponseDto> datingList = datingRepository.findAllByUser(userEntity)
                 .stream()
                 .map(DatingResponseDto::new)
-                .toList();
-        UserOwnProfileResponseDto userProfileResponseDto = new UserOwnProfileResponseDto(findUserById(userEntity.getId()), datingList);
+                .collect(Collectors.toList());
+        boolean isNew = userEntity.getUserProfileEntity().isNew();
+        boolean userActiveStatus = userEntity.getUserProfileEntity().isUserActiveStatus();
+        UserOwnProfileResponseDto userProfileResponseDto =
+                new UserOwnProfileResponseDto(
+                        userEntity,
+                        datingList,
+                        isNew,
+                        userActiveStatus
+                );
         return ResponseEntity.status(HttpStatus.OK).body(ApiResponse.successData(userProfileResponseDto));
     }
+
 
     public ResponseEntity<ApiResponse<UserProfileMatchResponseDto>> getUserProfile(UserEntity user, Long userId) {
         UserMatchStatus matchStatus = (userMatchStatusRepository.findByUserMatchedOneAndUserMatchedTwo(user, findUserById(userId)) == null) ? userMatchStatusRepository.findByUserMatchedOneAndUserMatchedTwo(findUserById(userId), user) : userMatchStatusRepository.findByUserMatchedOneAndUserMatchedTwo(user, findUserById(userId));
